cmake_minimum_required(VERSION 3.10)
project(queue)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

enable_testing()

set(CMAKE_CXX_STANDARD 20)
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
find_package(PkgConfig REQUIRED)
pkg_check_modules(CMOCKA REQUIRED cmocka)

add_executable(test_queue test_queue.cpp)
add_executable(client client.cpp)
add_executable(server server.cpp)
add_executable(bench bench.cpp)
target_link_libraries(test_queue Threads::Threads)
target_link_libraries(client Threads::Threads)
target_link_libraries(server Threads::Threads)
target_link_libraries(bench Threads::Threads)

target_include_directories(test_queue PRIVATE ${CMOCKA_INCLUDE_DIRS})
target_link_directories(test_queue PRIVATE ${CMOCKA_LIBRARY_DIRS})
target_link_libraries(test_queue ${CMOCKA_LIBRARIES})
add_test(NAME test_queue COMMAND ${CMAKE_BINARY_DIR}/test_queue)
